book repo test 수정 및 작성